ADD WORKFLOW AND MODEL TESTS